Correct HTML structure and fix text errors
Fixed minor text errors and ensured proper HTML structure.

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <source src="video/Клавіатура.webm" type="video/webm">
 </video>
 
-<p>Це друге речення документа.</p>
+<p>Це другеgege речення документа.</p>
 
 
 <video width="320" height="240" controls>
@@ -39,3 +39,4 @@
 
 </body>
 </html>
+
